--- a/composeApp/src/jsMain/resources/index.html
+++ b/composeApp/src/jsMain/resources/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenWord</title>
     <script type="application/javascript" src="composeApp.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.12.0/sql-wasm.js"></script>
+
     <style>
         html, body {
             width: 100%;
@@ -16,6 +18,5 @@
     </style>
 </head>
 <body>
-<!-- ComposeViewport will inject the necessary canvas here automatically -->
 </body>
 </html>
